<resources>
    <string name="app_name">QuizApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="quiz_app">Quiz App</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="q_like_math">Do you like Math?</string>
    <string name="q_six_times_six" >What is 6 x 6?</string>
    <string name="q_13_times_12" />
    <string name="q_thirteen_times_11">What is 13 x 11?</string>
    <string name="roots_of_x_minus_2_sqr" >What are the roots of (x-2)^2 = 0?</string>
    <string name="q_roots_of_xMinusTwoSqr">What are the roots of (x-2)^2 = 0?</string>
    <string name="submit">Submit</string>
</resources>
